# serverdemo

./: CMakeLists.txt
src/: CMakeLists.txt
src/battlesvr/: battleroom.cpp  battleroom.h  battleserver.cpp  battleserver.h  battleuser.cpp  battleuser.h  dbaccess.cpp  dbaccess.h  eventhandle.cpp  eventhandle.h  forwarddecl.h  lobby.cpp  lobby.h  mail.cpp  mail.h  main.cpp  netpacket.h  redisClient.cpp  redisClient.h  soap.pb.cc
src/common/: Random.cpp  Random.hpp  SingletonTemplate.hpp  any.hpp  base.cpp  base.h  base64.h  buffer.hpp  logger.h  md5.cpp  md5.h  redis.cpp  request_handler.cpp  tcpchannel.cpp  tcpchannel.h  tcpserver.cpp  tcpserver.h
src/httplib/: request_handler.cpp  request_handler.hpp  server.cpp  server.hpp
src/mysqlcpp/: inputbinder.hpp  mysqlcpp.cpp  mysqlcpp.h  mysqlexception.cpp  mysqlexception.h  mysqlstatement.cpp  mysqlstatement.h  outputbinder.hpp
thirdpart/mysql/include/: my_config.h
thirdpart/protobuf/lib/: libprotobuf-lite.lib
tools/config/: port.json
tools/protoc/: protoc.bat  soap.pb.h  soap.proto
tools/sql/: create.sql  createDB.bat  createdb.sh  update.sql
